[package]
name = "l-sync"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.3", git = "https://github.com/fltk-rs/fltk-rs" }
rodio = "0.15.0"

[build-dependencies]
fl2rust = "0.4"